card column spacing structure & menu alert style fixes

--- a/style.css
+++ b/style.css
@@ -179,7 +179,12 @@ nav li a {
 
 .nav-updates {
     background: #feede2;
-    padding: 5px 15px; 
+    width: 50px;
+    height: 30px;
+    padding-top: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 25px;
     position: absolute;
     right: 32px;
@@ -220,11 +225,7 @@ section {
     display: inline-block;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    column-gap: 35px;
-}
-
-#main-content {
-    padding: 0 15px;
+    column-gap: 25px;
 }
 
 .column-header {
@@ -273,7 +274,7 @@ h5 {
     justify-content: center;
     align-items: center;
     column-gap: 12px;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
 }
 
 .add-task-icon {
@@ -285,18 +286,35 @@ h5 {
     border-radius: 50%;
 }
 
+hr {
+    border: 1px solid #9e9e9e;
+}
+
 .card {
-    padding: 25px 20px;
-    border-top: 2px solid #9e9e9e;
+    margin: 25px 19px;
+    padding-top: 25px;
+    border-top: 2px solid #eeeeee;
+    box-sizing: content-box;
 }
 
 .card:first-of-type {
     border: none;
+    padding-top: 0;
+}
+
+.card-spacer {
+    padding: 0 15px;
 }
 
 .card-selected {
     background-color: #eff9ff;
     border-top: 2px solid #81d4fa;
+    margin: 0;
+    padding: 25px 19px;
+}
+
+.card-selected .card-spacer {
+    padding: 0;
 }
 
 .card h6 {
@@ -350,7 +368,8 @@ h5 {
 
 .card-updates span {
     font-size: 14px;
-    margin-left: 4px;
+    margin-left: 5px;
+    margin-bottom: 2px;
     letter-spacing: -1px;
     color: #8ea4b1;
 }
